Blender 2.79 Objects made duplicates real still refer armature proxy #52260

Closed
opened 2017-08-04 08:10:11 +02:00 by Yusuke Fujiwara · 11 comments

System Information
Windows 10, GTX Titan X

Blender Version
Broken: 2.79RC1 5e9132b
Worked: 2.78c e92f235283

Short description of error
on 2.78, Objects refers realized armature.
but now they refers armature proxy.

Exact steps for others to reproduce the error

  1. Link a Character or something from other blend file.
  2. make armature proxy.
  3. "Make Duplicates Real" with the linked character.
  4. 2.78: posing with realized armature, it works.
    2.79: objects still refers armature proxy.

20170804-150224_blender.jpg

20170804-150555_blender.jpg

**System Information** Windows 10, GTX Titan X **Blender Version** Broken: 2.79RC1 5e9132b Worked: 2.78c e92f235283 **Short description of error** on 2.78, Objects refers realized armature. but now they refers armature proxy. **Exact steps for others to reproduce the error** 1. Link a Character or something from other blend file. 2. make armature proxy. 3. "Make Duplicates Real" with the linked character. 4. 2.78: posing with realized armature, it works. 2.79: objects still refers armature proxy. ![20170804-150224_blender.jpg](https://archive.blender.org/developer/F692423/20170804-150224_blender.jpg) ![20170804-150555_blender.jpg](https://archive.blender.org/developer/F692425/20170804-150555_blender.jpg)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @YusukeFujiwara

Added subscriber: @YusukeFujiwara
Yusuke Fujiwara changed title from Blender 2.79 Objects made duplicates real still refers armature proxy to Blender 2.79 Objects made duplicates real still refer armature proxy 2017-08-04 08:11:14 +02:00

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

@YusukeFujiwara, please ALWAYS attach simple .blend file which demonstrates the issue. This saves lots of time for a handful of developers working on the bug tracker.

@mont29, guess this one is for you? Maybe you'll manage to reproduce the issue..

@YusukeFujiwara, please ALWAYS attach simple .blend file which demonstrates the issue. This saves lots of time for a handful of developers working on the bug tracker. @mont29, guess this one is for you? Maybe you'll manage to reproduce the issue..

Sorry for that. these are .blend files.

this is link source.
source.blend

linking file.
work.blend

this is bad file which is made by 2.79 making duplicates real.
baddata saved by 2.79.blend
opening this file, objects don't refer any armature data anymore.

Sorry for that. these are .blend files. this is link source. [source.blend](https://archive.blender.org/developer/F699768/source.blend) linking file. [work.blend](https://archive.blender.org/developer/F699777/work.blend) this is bad file which is made by 2.79 making duplicates real. [baddata saved by 2.79.blend](https://archive.blender.org/developer/F699781/baddata_saved_by_2.79.blend) opening this file, objects don't refer any armature data anymore.

This issue was referenced by a78b596272

This issue was referenced by a78b596272711c6f591178ac05bd191dac449e4f
Bastien Montagne self-assigned this 2017-08-08 16:02:42 +02:00

Please follow our submission template and guidelines and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

That said, issue confirmed, fix incoming.

Please follow our [submission template and guidelines](https://developer.blender.org/maniphest/task/edit/form/1/) and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc. That said, issue confirmed, fix incoming.

bah, looks like @Sergey was also triaging today! :P

bah, looks like @Sergey was also triaging today! :P

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

thanks for fixing!
I'll try to make valid bug report next time.

thanks for fixing! I'll try to make valid bug report next time.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52260
No description provided.